--- a/ecommerce.beta/E-commerce/ecommerce.beta/chi-siamo.html
+++ b/ecommerce.beta/E-commerce/ecommerce.beta/chi-siamo.html
@@ -3,19 +3,18 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>ShopEasy — Prodotti</title>
-  <link rel="icon" type="image/jpg" href="imgs/shopping-bag-icona-in-stile-appartamento-simbolo-di-pacchetto-isolato-su-sfondo-bianco-icona-del-pacchetto-semplice-icona-astratta-in-nero-shopping-bag-il-segno-il-vettore-mk3gy5.jpg">
+  <title>ShopEasy — Chi siamo</title>
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <!-- NAVBAR -->
+  <!--NAVBAR-->
   <nav class="navbar navbar-expand-lg sticky-top">
     <div class="container">
       <div class="d-flex align-items-center gap-2">
-        <!-- icona che apre l'offcanvas categories (resta) -->
         <button id="catToggleBtn" class="btn btn-outline-primary p-1" data-bs-toggle="offcanvas" data-bs-target="#offcanvasCategories" aria-controls="offcanvasCategories" title="Categorie" style="width:40px;height:40px">
           <i class="bi bi-list"></i>
         </button>
@@ -41,13 +40,31 @@
     </div>
   </nav>
 
-  <!-- MAIN: layout pulito senza sidebar -->
   <main class="container my-5">
-    <h2 class="fw-bold mb-4">Tutti i prodotti</h2>
-    <div id="productGrid" class="row g-3"></div>
+    <h2 class="fw-bold mb-3">Chi siamo</h2>
+    <div class="row g-4">
+      <div class="col-lg-8">
+        <p class="lead">Siamo ShopLite: un piccolo team dedicato a creare capi e accessori che uniscono stile, comfort e sostenibilità. Ci concentriamo su prodotti durevoli, realizzati con materiali selezionati e processi produttivi responsabili.</p>
+        <h5>Materiali selezionati</h5>
+        <p class="text-muted">Usiamo principalmente cotone organico e materiali riciclati per ridurre l'impatto ambientale. I tessuti sono testati per durata e comfort: vogliamo che un capo resti nel tuo guardaroba a lungo.</p>
+      </div>
+      <div class="col-lg-4">
+        <!--uso .card per mantenere leggibilità ma lasciare il background generale-->
+        <div class="card p-3">
+          <h6>I nostri valori</h6>
+          <ul class="small text-muted">
+            <li>Qualità e durabilità</li>
+            <li>Trasparenza nella filiera</li>
+            <li>Scelte sostenibili</li>
+            <li>Design funzionale</li>
+          </ul>
+          <img src="https://images.unsplash.com/photo-1520975912525-7b4ff9f2b8b7?q=80&w=800&auto=format&fit=crop" class="img-fluid rounded" alt="">
+        </div>
+      </div>
+    </div>
   </main>
 
-  <!-- Offcanvas categories (mobile / menu) - mantiene la funzionalità di filtro -->
+  <!--Offcanvas (stesso comportamento)-->
   <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasCategories" aria-labelledby="offcanvasCategoriesLabel">
     <div class="offcanvas-header">
       <h5 class="offcanvas-title" id="offcanvasCategoriesLabel">Categorie</h5>
@@ -58,7 +75,6 @@
     </div>
   </div>
 
-  <!-- Offcanvas cart -->
   <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasCart">
     <div class="offcanvas-header">
       <h5 class="offcanvas-title">Carrello</h5>
@@ -76,7 +92,7 @@
     </div>
   </div>
 
-  <!-- FOOTER -->
+  <!--FOOTER-->
   <footer class="border-top py-4 mt-5">
     <div class="container d-flex flex-wrap justify-content-between align-items-center gap-2">
       <small class="text-muted">© <span id="year"></span> ShopEasy</small>
@@ -88,6 +104,5 @@
   <script defer src="app.js"></script>
 </body>
 </html>
-
 
 
