--- a/ecommerce.beta/E-commerce/ecommerce.beta/prodotti.html
+++ b/ecommerce.beta/E-commerce/ecommerce.beta/prodotti.html
@@ -4,18 +4,17 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ShopEasy — Prodotti</title>
-  <link rel="icon" type="image/jpg" href="imgs/shopping-bag-icona-in-stile-appartamento-simbolo-di-pacchetto-isolato-su-sfondo-bianco-icona-del-pacchetto-semplice-icona-astratta-in-nero-shopping-bag-il-segno-il-vettore-mk3gy5.jpg">
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <!-- NAVBAR -->
+  <!--NAVBAR-->
   <nav class="navbar navbar-expand-lg sticky-top">
     <div class="container">
       <div class="d-flex align-items-center gap-2">
-        <!-- icona che apre l'offcanvas categories (resta) -->
         <button id="catToggleBtn" class="btn btn-outline-primary p-1" data-bs-toggle="offcanvas" data-bs-target="#offcanvasCategories" aria-controls="offcanvasCategories" title="Categorie" style="width:40px;height:40px">
           <i class="bi bi-list"></i>
         </button>
@@ -41,13 +40,27 @@
     </div>
   </nav>
 
-  <!-- MAIN: layout pulito senza sidebar -->
   <main class="container my-5">
-    <h2 class="fw-bold mb-4">Tutti i prodotti</h2>
-    <div id="productGrid" class="row g-3"></div>
+    <div class="row">
+      <!--Left sidebar visible on lg-->
+      <aside id="leftSidebar" class="col-lg-3 d-none d-lg-block">
+        <div class="card sticky-top" style="top:94px">
+          <div class="card-body">
+            <h6 class="mb-3">Categorie</h6>
+            <ul id="sidebarCategories" class="list-group list-group-flush"></ul>
+          </div>
+        </div>
+      </aside>
+
+      <!--Products grid-->
+      <section class="col-12 col-lg-9">
+        <h2 class="fw-bold mb-4">Tutti i prodotti</h2>
+        <div id="productGrid" class="row g-3"></div>
+      </section>
+    </div>
   </main>
 
-  <!-- Offcanvas categories (mobile / menu) - mantiene la funzionalità di filtro -->
+  <!--Offcanvas categories & cart-->
   <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasCategories" aria-labelledby="offcanvasCategoriesLabel">
     <div class="offcanvas-header">
       <h5 class="offcanvas-title" id="offcanvasCategoriesLabel">Categorie</h5>
@@ -58,7 +71,6 @@
     </div>
   </div>
 
-  <!-- Offcanvas cart -->
   <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasCart">
     <div class="offcanvas-header">
       <h5 class="offcanvas-title">Carrello</h5>
@@ -76,7 +88,7 @@
     </div>
   </div>
 
-  <!-- FOOTER -->
+  <!--FOOTER-->
   <footer class="border-top py-4 mt-5">
     <div class="container d-flex flex-wrap justify-content-between align-items-center gap-2">
       <small class="text-muted">© <span id="year"></span> ShopEasy</small>
@@ -88,6 +100,3 @@
   <script defer src="app.js"></script>
 </body>
 </html>
-
-
-
