--- a/ecommerce.beta/E-commerce/ecommerce.beta/product.html
+++ b/ecommerce.beta/E-commerce/ecommerce.beta/product.html
@@ -3,20 +3,21 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>ShopEasy — Prodotti</title>
-  <link rel="icon" type="image/jpg" href="imgs/shopping-bag-icona-in-stile-appartamento-simbolo-di-pacchetto-isolato-su-sfondo-bianco-icona-del-pacchetto-semplice-icona-astratta-in-nero-shopping-bag-il-segno-il-vettore-mk3gy5.jpg">
+  <title>ShopEasy — Prodotto</title>
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-  <!-- NAVBAR -->
+  <!--NAVBAR-->
   <nav class="navbar navbar-expand-lg sticky-top">
     <div class="container">
       <div class="d-flex align-items-center gap-2">
-        <!-- icona che apre l'offcanvas categories (resta) -->
-        <button id="catToggleBtn" class="btn btn-outline-primary p-1" data-bs-toggle="offcanvas" data-bs-target="#offcanvasCategories" aria-controls="offcanvasCategories" title="Categorie" style="width:40px;height:40px">
+        <button id="catToggleBtn" class="btn btn-outline-primary p-1" data-bs-toggle="offcanvas"
+                data-bs-target="#offcanvasCategories" aria-controls="offcanvasCategories" title="Categorie"
+                style="width:40px;height:40px">
           <i class="bi bi-list"></i>
         </button>
         <a class="navbar-brand fw-bold mb-0 ms-1 text-dark" href="index.html">ShopEasy</a>
@@ -41,13 +42,17 @@
     </div>
   </nav>
 
-  <!-- MAIN: layout pulito senza sidebar -->
+  <!-- MAIN: dettaglio prodotto -->
   <main class="container my-5">
-    <h2 class="fw-bold mb-4">Tutti i prodotti</h2>
-    <div id="productGrid" class="row g-3"></div>
+    <div id="productDetail" class="row">
+      <!-- renderato dinamicamente da app.js -->
+      <div class="col-12 text-center">
+        <div class="spinner-border text-primary" role="status" id="detailLoading"><span class="visually-hidden">Caricamento...</span></div>
+      </div>
+    </div>
   </main>
 
-  <!-- Offcanvas categories (mobile / menu) - mantiene la funzionalità di filtro -->
+  <!-- Offcanvas categories & cart -->
   <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasCategories" aria-labelledby="offcanvasCategoriesLabel">
     <div class="offcanvas-header">
       <h5 class="offcanvas-title" id="offcanvasCategoriesLabel">Categorie</h5>
@@ -58,7 +63,6 @@
     </div>
   </div>
 
-  <!-- Offcanvas cart -->
   <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasCart">
     <div class="offcanvas-header">
       <h5 class="offcanvas-title">Carrello</h5>
@@ -88,6 +92,3 @@
   <script defer src="app.js"></script>
 </body>
 </html>
-
-
-
