--- a/ecommerce.beta/chi-siamo.html
+++ b/ecommerce.beta/chi-siamo.html
@@ -28,8 +28,8 @@
       <div class="collapse navbar-collapse" id="navbarsMain">
         <ul class="navbar-nav ms-auto me-3">
           <li class="nav-item"><a id="nav-home" class="nav-link text-dark" href="index.html">Home</a></li>
-          <li class="nav-item"><a id="nav-shop" class="nav-link text-dark" href="prodotti.html">Prodotti</a></li>
-          <li class="nav-item"><a id="nav-about" class="nav-link text-dark" href="chi-siamo.html">Chi siamo</a></li>
+          <li class="nav-item"><a id="nav-shop" class="nav-link text-dark" href="prodotti.html">Products</a></li>
+          <li class="nav-item"><a id="nav-about" class="nav-link text-dark" href="chi-siamo.html">About Us</a></li>
         </ul>
 
         <button class="btn btn-outline-primary position-relative" id="cartButton" data-bs-toggle="offcanvas" data-bs-target="#offcanvasCart">
@@ -41,22 +41,22 @@
   </nav>
 
   <main class="container my-5">
-    <h2 class="fw-bold mb-3">Chi siamo</h2>
+    <h2 class="fw-bold mb-3">About Us</h2>
     <div class="row g-4">
       <div class="col-lg-8">
-        <p class="lead">Siamo ShopLite: un piccolo team dedicato a creare capi e accessori che uniscono stile, comfort e sostenibilità. Ci concentriamo su prodotti durevoli, realizzati con materiali selezionati e processi produttivi responsabili.</p>
-        <h5>Materiali selezionati</h5>
-        <p class="text-muted">Usiamo principalmente cotone organico e materiali riciclati per ridurre l'impatto ambientale. I tessuti sono testati per durata e comfort: vogliamo che un capo resti nel tuo guardaroba a lungo.</p>
+        <p class="lead">We are ShopLite: a small team dedicated to creating garments and accessories that combine style, comfort, and sustainability. We focus on durable products made with selected materials and responsible production processes.</p>
+        <h5>Selected Materials</h5>
+        <p class="text-muted">We primarily use organic cotton and recycled materials to reduce environmental impact. The fabrics are tested for durability and comfort: we want a garment to stay in your wardrobe for a long time.</p>
       </div>
       <div class="col-lg-4">
         <!--uso .card per mantenere leggibilità ma lasciare il background generale-->
         <div class="card p-3">
-          <h6>I nostri valori</h6>
+          <h6>Our Values</h6>
           <ul class="small text-muted">
-            <li>Qualità e durabilità</li>
-            <li>Trasparenza nella filiera</li>
-            <li>Scelte sostenibili</li>
-            <li>Design funzionale</li>
+            <li>Quality and Durability</li>
+            <li>Transparency in the Supply Chain</li>
+            <li>Sustainable Choices</li>
+            <li>Functional Design</li>
           </ul>
           <img src="https://images.unsplash.com/photo-1520975912525-7b4ff9f2b8b7?q=80&w=800&auto=format&fit=crop" class="img-fluid rounded" alt="">
         </div>
@@ -67,7 +67,7 @@
   <!--Offcanvas (stesso comportamento)-->
   <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasCategories" aria-labelledby="offcanvasCategoriesLabel">
     <div class="offcanvas-header">
-      <h5 class="offcanvas-title" id="offcanvasCategoriesLabel">Categorie</h5>
+      <h5 class="offcanvas-title" id="offcanvasCategoriesLabel">Categories</h5>
       <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
     </div>
     <div class="offcanvas-body">
@@ -77,17 +77,17 @@
 
   <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasCart">
     <div class="offcanvas-header">
-      <h5 class="offcanvas-title">Carrello</h5>
+      <h5 class="offcanvas-title">Cart</h5>
       <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
     </div>
     <div class="offcanvas-body d-flex flex-column">
       <ul id="cartList" class="list-group list-group-flush mb-3 small"></ul>
       <div class="mt-auto">
         <div class="d-flex justify-content-between align-items-center mb-2">
-          <span class="fw-semibold">Subtotale</span>
+          <span class="fw-semibold">Subtotal</span>
           <span id="cartSubtotal" class="fs-5 fw-bold">€0,00</span>
         </div>
-        <button class="btn btn-dark w-100" id="checkoutBtn" disabled>Procedi al checkout</button>
+        <button class="btn btn-dark w-100" id="checkoutBtn" disabled>Proceed to Checkout</button>
       </div>
     </div>
   </div>
@@ -101,7 +101,8 @@
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script defer src="app.js"></script>
+  <script type="module" src="js/app.js"></script>
+  
 </body>
 </html>
 
