--- a/ecommerce.beta/index.html
+++ b/ecommerce.beta/index.html
@@ -32,8 +32,8 @@
       <div class="collapse navbar-collapse" id="navbarsMain">
         <ul class="navbar-nav ms-auto me-3">
           <li class="nav-item"><a id="nav-home" class="nav-link text-dark" href="index.html">Home</a></li>
-          <li class="nav-item"><a id="nav-shop" class="nav-link text-dark" href="prodotti.html">Prodotti</a></li>
-          <li class="nav-item"><a id="nav-about" class="nav-link text-dark" href="chi-siamo.html">Chi siamo</a></li>
+          <li class="nav-item"><a id="nav-shop" class="nav-link text-dark" href="prodotti.html">Products</a></li>
+          <li class="nav-item"><a id="nav-about" class="nav-link text-dark" href="chi-siamo.html">About Us</a></li>
         </ul>
 
         <button class="btn btn-outline-primary position-relative" id="cartButton" data-bs-toggle="offcanvas" data-bs-target="#offcanvasCart">
@@ -66,17 +66,17 @@
         <section id="intro" class="mb-4 intro-box">
           <div class="row align-items-center">
             <div class="col-md-8">
-              <h3>Chi siamo</h3>
+              <h3>About Us</h3>
               <p class="mb-0 text-muted">Creiamo prodotti pensati per il quotidiano: qualità, funzionalità e stile. Questa è una demo front-end pronta per essere estesa con un back-end in futuro.</p>
             </div>
             <div class="col-md-4 text-md-end">
-              <img src="https://images.unsplash.com/photo-1520975912525-7b4ff9f2b8b7?q=80&w=800&auto=format&fit=crop" alt="about" class="img-fluid rounded" style="max-height:100px;object-fit:cover">
+              <img src="imgs/shopping-bag-icona-in-stile-appartamento-simbolo-di-pacchetto-isolato-su-sfondo-bianco-icona-del-pacchetto-semplice-icona-astratta-in-nero-shopping-bag-il-segno-il-vettore-mk3gy5.jpg" class="img-fluid rounded" style="max-height:100px;object-fit:cover">
             </div>
           </div>
         </section>
 
         <section id="featured" class="mb-5">
-          <h4 class="mb-3">Prodotti in evidenza</h4>
+          <h4 class="mb-3">Featured Products</h4>
           <div id="featuredGrid" class="row g-3"></div>
         </section>
       </div>
@@ -86,7 +86,7 @@
   <!--OFFCANVAS: Categories-->
   <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasCategories" aria-labelledby="offcanvasCategoriesLabel">
     <div class="offcanvas-header">
-      <h5 class="offcanvas-title" id="offcanvasCategoriesLabel">Categorie</h5>
+      <h5 class="offcanvas-title" id="offcanvasCategoriesLabel">Categories</h5>
       <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
     </div>
     <div class="offcanvas-body">
@@ -97,17 +97,17 @@
   <!--OFFCANVAS: Cart-->
   <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasCart">
     <div class="offcanvas-header">
-      <h5 class="offcanvas-title">Carrello</h5>
+      <h5 class="offcanvas-title">Cart</h5>
       <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
     </div>
     <div class="offcanvas-body d-flex flex-column">
       <ul id="cartList" class="list-group list-group-flush mb-3 small"></ul>
       <div class="mt-auto">
         <div class="d-flex justify-content-between align-items-center mb-2">
-          <span class="fw-semibold">Subtotale</span>
+          <span class="fw-semibold">Subtotal</span>
           <span id="cartSubtotal" class="fs-5 fw-bold">€0,00</span>
         </div>
-        <button class="btn btn-dark w-100" id="checkoutBtn" disabled>Procedi al checkout</button>
+        <button class="btn btn-dark w-100" id="checkoutBtn" disabled>Proceed to Checkout</button>
       </div>
     </div>
   </div>
@@ -121,7 +121,8 @@
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script defer src="app.js"></script>
+  <script type="module" src="js/app.js"></script>
+
 </body>
 </html>
 
