tutto finito e funzionante
ho fatto un pò di modifiche e ho rimosso le mie chiavi personali da application.properties

--- a/ecommerce.beta/succes.html
+++ b/ecommerce.beta/succes.html
@@ -1,5 +1,16 @@
-<h1>Pagamento completato!</h1>
-<script>
-  localStorage.removeItem("shopeasy-cart");
-</script>
-<p>Grazie per il tuo acquisto. Il tuo ordine è stato elaborato con successo.</p>
+<!DOCTYPE html>
+<html lang="it">
+<head>
+  <meta charset="UTF-8">
+  <title>Pagamento completato</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body class="text-center" style="padding:50px">
+
+  <h1>🎉 Pagamento completato!</h1>
+  <p>Grazie per il tuo ordine. Stiamo elaborando la spedizione.</p>
+
+  <a href="index.html" class="btn btn-primary">Torna alla Home</a>
+
+</body>
+</html>
