--- a/ecommerce.beta/admin-login.html
+++ b/ecommerce.beta/admin-login.html
@@ -1,40 +1,49 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  <meta charset="UTF-8">
-  <title>Admin Login</title>
+    <meta charset="UTF-8">
+    <title>Admin Login – ShopEasy</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
 
-  <h2>Area Riservata Admin</h2>
+<body class="bg-light">
 
-  <input type="password" id="adminPassword" placeholder="Password admin">
-  <button id="loginBtn">Accedi</button>
+<div class="container d-flex justify-content-center align-items-center" style="height:100vh">
+    <div class="card p-4 shadow" style="max-width: 400px; width:100%">
+        <h3 class="text-center mb-3">Admin Login</h3>
 
-  <script>
-    document.getElementById("loginBtn").addEventListener("click", async () => {
-      const password = document.getElementById("adminPassword").value;
+        <div class="mb-3">
+            <label class="form-label">Password amministratore</label>
+            <input type="password" id="adminPassword" class="form-control">
+        </div>
 
-      if (!password) {
-        alert("Inserisci la password");
-        return;
-      }
+        <button id="loginBtn" class="btn btn-primary w-100">Accedi</button>
 
-      const req = await fetch("http://localhost:3000/api/admin/login?password=" + password, {
+        <p id="loginError" class="text-danger text-center mt-3" style="display:none;">
+            Password errata.
+        </p>
+    </div>
+</div>
+
+<script>
+document.getElementById("loginBtn").addEventListener("click", async () => {
+    const password = document.getElementById("adminPassword").value.trim();
+
+    const res = await fetch("http://localhost:8080/api/admin/login?password=" + password, {
         method: "POST"
-      });
-
-      const data = await req.json();
-
-      if (data.success === "true") {
-        localStorage.setItem("admin_token", data.token);
-        window.location.href = "admin.html";
-      } else {
-        alert("Password errata!");
-      }
     });
-  </script>
+
+    const data = await res.json();
+
+    if (data.success) {
+        localStorage.setItem("adminLogged", "true");
+        window.location.href = "admin.html";
+    } else {
+        document.getElementById("loginError").style.display = "block";
+    }
+});
+</script>
 
 </body>
 </html>
-
