--- a/ecommerce.beta/admin.html
+++ b/ecommerce.beta/admin.html
@@ -1,44 +1,45 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  <meta charset="UTF-8">
-  <title>Admin - Ordini</title>
+    <meta charset="UTF-8">
+    <title>Admin – ShopEasy</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
 
-  <h2>Ordini Ricevuti</h2>
-  <div id="orders"></div>
+<body class="bg-light">
 
-  <script>
-    async function checkLogin() {
-      const token = localStorage.getItem("admin_token");
+<nav class="navbar navbar-dark bg-dark mb-4">
+    <div class="container">
+        <a class="navbar-brand" href="#">Admin Panel</a>
+        <button id="logoutBtn" class="btn btn-danger btn-sm">Logout</button>
+    </div>
+</nav>
 
-      if (!token) {
-        window.location.href = "admin-login.html";
-        return;
-      }
+<div class="container">
+    <h2 class="mb-4">Ordini ricevuti</h2>
 
-      const res = await fetch("http://localhost:3000/api/admin/check-session?token=" + token);
-      const data = await res.json();
+    <table class="table table-striped shadow-sm bg-white">
+      <thead class="table-dark">
+    <tr>
+        <th>ID Ordine</th>
+        <th>Cliente</th>
+        <th>Indirizzo</th>
+        <th>Telefono</th>
+        <th>Totale</th>
+        <th>Data</th>
+        <th>Prodotti</th>
+    </tr>
+    </thead>
+     <tbody id="ordersTable"></tbody>
 
-      if (data.valid !== "true") {
-        localStorage.removeItem("admin_token");
-        window.location.href = "admin-login.html";
-      } else {
-        loadOrders(token);
-      }
-    }
+            <tr><td colspan="3" class="text-center text-muted">Caricamento...</td></tr>
+        </tbody>
+    </table>
+</div>
 
-    async function loadOrders(token) {
-      const res = await fetch("http://localhost:3000/api/admin/orders?token=" + token);
-      const orders = await res.json();
-
-      const container = document.getElementById("orders");
-      container.innerHTML = "<pre>" + JSON.stringify(orders, null, 2) + "</pre>";
-    }
-
-    checkLogin();
-  </script>
+<script src="admin.js"></script>
 
 </body>
 </html>
+
