--- a/ecommerce.beta/cancel.html
+++ b/ecommerce.beta/cancel.html
@@ -1,2 +1,16 @@
-<h1>Pagamento annullato</h1>
-<p>Ci dispiace, ma il tuo pagamento è stato annullato. Se hai bisogno di ulteriore assistenza, ti preghiamo di contattare il nostro supporto clienti.</p>
+<!DOCTYPE html>
+<html lang="it">
+<head>
+  <meta charset="UTF-8">
+  <title>Pagamento annullato</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body class="text-center" style="padding:50px">
+
+  <h1>❌ Pagamento annullato</h1>
+  <p>Il pagamento non è stato completato. Puoi riprovare.</p>
+
+  <a href="checkout.html" class="btn btn-warning">Torna al checkout</a>
+
+</body>
+</html>
